--- a/input/stylesheets/screen.sass
+++ b/input/stylesheets/screen.sass
@@ -20,10 +20,6 @@ html
   :color #333
 
 a
-  :text-decoration none
-  :border-bottom 1px solid #bbb
-  :line-height 13px
-  :display inline-block
   :color darken(#007f12, 2%)
   &:hover
     :border-bottom-color transparent
@@ -54,6 +50,7 @@ header > section, main > section, .player > section, .contact > section, footer,
     +margin-trailer(0.5)
     :position relative
     :margin 0
+    :margin-right 230px
 
     &:before
       display: block
