--- a/input/_layouts/layout.haml
+++ b/input/_layouts/layout.haml
@@ -43,7 +43,7 @@
 								%a{:href => "/"}
 									About me
 							%li
-								%a.russian.language{:href => "/"}
+								%a.russian.language{:href => "/"}<>
 									По-русски
 								%a.russian.language.icon{:href => "/"}<>
 				.player.compact{:hidden => true}
@@ -128,7 +128,7 @@
 								%dt Author & performer
 								%dd{:title => "4th Grushensky Festival Winner"} Anvar Ismagilov
 								%dt Guitar
-								%dd Andrey Zloyan
+								%dd{:title => "All in all a nice guy"} Andrey Zloyan
 								%dt Keyboard
 								%dd Valery Drozd
 								%dt Drums
@@ -192,7 +192,7 @@
 					%a{:href => "/"}
 						About me
 				%li
-					%a.russian.language{:href => "/"}
+					%a.russian.language{:href => "/"}<>
 						По-русски
 					%a.russian.language.icon{:href => "/"}<>
 
