--- a/input/stylesheets/_player.sass
+++ b/input/stylesheets/_player.sass
@@ -80,6 +80,7 @@ body
   +iconed
   &:before
     :content '\25b6'
+    :margin-right -2px
   :padding-left 0
   +sassy-button("glass", 0.9em, false, #aaa)
   +text-shadow(none)
