--- a/input/stylesheets/_header.sass
+++ b/input/stylesheets/_header.sass
@@ -64,6 +64,7 @@ menu
     :background url(../images/russian.png) center top no-repeat
     :background-size 16px 16px
     :opacity 0.7
+    :display inline-block
 main
   :display block
   menu
