--- a/input/stylesheets/_main.sass
+++ b/input/stylesheets/_main.sass
@@ -24,13 +24,16 @@ main
   &[hidden]
     :opacity 0
     :display block
+
+  &:not(.invert)
+    > span
+      +ui-tooltip(left, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
   > span
     :display block
-    +ui-tooltip(left, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
     :color #fff
     +text-shadow(0 1px 0px #333)
-    :padding 4px
+    :padding 5px
     +adjust-font-size-to(14px)
-  &.top
+  &.invert
     > span
-      +ui-tooltip(top, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
+      +ui-tooltip(right, $border-radius: 6px, $tip-color: lighten(#4b9a5f, 7%), $tip-color-alt: #4b9a5f, $tip-width: 30px, $tip-height: 15px, $border-width: 4px)
